PlacemarkLayout: use qreal and QRectF where possible

REVIEW: 103777
BUG: 288297